--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.8.1",
+    "masonry-layout": "^4.2.2",
+    "minimasonry": "^1.3.2",
     "nuxt": "^3.13.0",
     "plaiceholder": "^3.0.0",
     "primeicons": "^7.0.0",
